--- a/demo/游戏作品/测试.html
+++ b/demo/游戏作品/测试.html
@@ -6,8 +6,9 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-			var se=new Set([1,2]);
-			console.log(se[0]);
+			var a={a:1,b:2};
+			var b={a:2};
+			console.log(Object.assign(a,b));
 		</script>
 	</body>
 </html>
