--- a/demo/游戏作品/html/canvas.html
+++ b/demo/游戏作品/html/canvas.html
@@ -11,9 +11,7 @@
 				width: 1200px;
 				margin: 50px auto 0;
 				position: relative;
-			}
-			#canvas{
-				background: url(../img/canvas/c-bg.png) no-repeat;
+				background: url(../img/canvas/1.png) no-repeat;
 				background-size: 100% 100%;
 			}
 		</style>
