--- a/demo/游戏作品/html/canvas.html
+++ b/demo/游戏作品/html/canvas.html
@@ -21,6 +21,8 @@
 			</div>
 			<!--canvas-->
 			<canvas id="canvas" width="1200" height="800"></canvas>
+			<!--游戏结束-->
+			<div id="gameOver"></div>
 		</div>
 		<script src="../js/canvas/data.js" type="text/javascript"></script>
 		<script src="../js/canvas/commonFunctions.js" type="text/javascript" ></script>
